src/test/ui/ffi_pure.stderr
error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:4:1
   |
LL | #[ffi_pure]
   | ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0755`.
